--- a/sample.env
+++ b/sample.env
@@ -8,9 +8,9 @@ COMPOSE_PROJECT_NAME=projectname
 PHPVERSION=php8
 DOCUMENT_ROOT=/var/www/drupal
 APACHE_DOCUMENT_ROOT=/var/www/drupal/docroot
-VHOSTS_DIR=/config/vhosts
-APACHE_LOG_DIR=/logs/apache2
-PHP_INI=/config/php/php.ini
+VHOSTS_DIR=./config/vhosts
+APACHE_LOG_DIR=./logs/apache2
+PHP_INI=./config/php/php.ini
 
 # Local Storage
 LOCAL_STORAGE_DIR=.
