--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   drupal:
-    image: agilehumanities/drupalbase:v104
+    image: agilehumanities/uva-dpc
     working_dir: "${DOCUMENT_ROOT}"
     container_name: '${COMPOSE_PROJECT_NAME}-drupal'
     restart: 'always'
