--- a/settings/composer.json
+++ b/settings/composer.json
@@ -38,7 +38,8 @@
         "drupal/svg_image": "^1.16",
         "drupal/token": "^1.10",
         "drupal/twig_tweak": "^3.1",
-        "drush/drush": "^11.0"
+        "drush/drush": "^11.0",
+        "stop14/dpc_content_test": "^1.0"
     },
     "require-dev": {
         "drupal/core-dev": "^9"
